--- a/src/css/navigation.css
+++ b/src/css/navigation.css
@@ -1,3 +1,15 @@
+.mobileMenu {
+  display: none;
+}
+
+.header .list {
+  display: none;
+}
+
+.header .list img {
+  display: none;
+}
+
 .header {
     position: absolute;
     display: flex;
