--- a/src/css/carousel.css
+++ b/src/css/carousel.css
@@ -2,7 +2,12 @@
     width: 40%;
     max-width: 600px;
     margin: auto;
-  }
+}
+
+.carousel-mobile-container {
+    width: 80%;
+    margin: auto;
+}
   
 .carousel-image {
   width: 100%;
@@ -16,4 +21,13 @@
 .slick-dots li {
   width: 16px; 
   height: 16px; 
+}
+
+.carousel-mobile-container .slick-dots li button:before {
+  font-size: 12px;
+}
+
+.carousel-mobile-container .slick-dots li {
+  width: 12px; 
+  height: 12px; 
 }
