--- a/src/css/carousel.css
+++ b/src/css/carousel.css
@@ -4,6 +4,23 @@
     margin: auto;
 }
 
+@media (min-width: 350px) and (max-width: 576px){
+  .carousel-container {
+    width: 80%;
+    max-width: 600px;
+    margin: auto;
+  }
+
+  .slick-dots li button:before {
+    font-size: 12px;
+  }
+
+  .slick-dots li {
+    width: 12px; 
+    height: 12px; 
+  }
+}
+
 .carousel-mobile-container {
     width: 80%;
     margin: auto;
@@ -14,11 +31,11 @@
   height: auto;
 }
 
-.slick-dots li button:before {
+.carousel-container .slick-dots li button:before {
   font-size: 16px;
 }
 
-.slick-dots li {
+.carousel-container .slick-dots li {
   width: 16px; 
   height: 16px; 
 }
