--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -44,7 +44,7 @@
     background-color: #181818;
 }
 
-.background {
+.backgroundContact {
     background-color: white;
     height: 600px;
     width: 100%;    
