--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 @import './css/mobile.css';
 @import './css/carousel.css';
 @import './css/mobileProduct.css';
+@import './css/mobileContact.css';
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
