--- a/src/css/navigation.css
+++ b/src/css/navigation.css
@@ -39,6 +39,14 @@
     width: 54px;
   }
 
+.contactHeader .list {
+  display: none;
+}
+
+.contactHeader .list img {
+  display: none;
+}
+
 .contactHeader {
   position: absolute;
   top: 0%;
@@ -61,7 +69,7 @@
 .contactHeader a {
   text-decoration: none;
   color: #181818;
-  font-weight: 200;
+  font-weight: 300;
   letter-spacing: 1px;
 }
 
