--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -1,5 +1,16 @@
 @media (min-width: 350px) and (max-width: 576px){  
 
+    .firstHidden {
+        position: relative;
+        left: 0%;
+        transition: 0.5s ease;
+      }
+      
+      .secondHidden {
+        opacity: 1;
+        transition: 0.5s ease;
+      }
+
     /* - - - - - - - - - - - - - - - - Background - - - - - - - - - - - - - - - - */
 
     .background {
