--- a/src/css/mobileProduct.css
+++ b/src/css/mobileProduct.css
@@ -37,7 +37,21 @@
         background-position: center;
         background-repeat: no-repeat;
     }
+
+    .mainProductMedia img {
+        display: none;
+    }
     
+    .mainProductMedia {
+        display: flex;
+        width: 100%; 
+        height: 375px;
+        background-image: url('../assets/images/background_multimedia.svg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+
     .titleContentProduct {
         position: absolute;
         top: 5.2%;
