--- a/src/css/product.css
+++ b/src/css/product.css
@@ -53,6 +53,16 @@
     width: 54px;
   }
 
+.mainProductMedia {
+    display: flex;
+    width: 100%; 
+    height: 775px;
+    background-image: url('../assets/images/background_multimedia.svg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 /* Sections */
 
 .firstSectionProduct, .secondSectionProduct {
